fix(test): update tests